--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
     <script>
-      // إعدادات الثيم الأساسية قبل تحميل التطبيق
       tailwind.config = {
         theme: {
           extend: {
@@ -36,14 +35,11 @@
         background-color: var(--brand-bg);
         margin: 0;
       }
-      
-      /* منع ظهور الفراغات قبل تحميل React */
       #root:empty {
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #E9EFEC;
       }
       #root:empty::after {
         content: "";
@@ -54,9 +50,7 @@
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
-      @keyframes spin {
-        to { transform: rotate(360deg); }
-      }
+      @keyframes spin { to { transform: rotate(360deg); } }
 
       @media print {
         @page { size: A4; margin: 0; }
@@ -71,7 +65,6 @@
           background: white !important;
         }
         .no-print { display: none !important; }
-        * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
       }
       .print-only { display: none; }
     </style>
@@ -81,9 +74,9 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.463.0?external=react",
-    "react-router-dom": "https://esm.sh/react-router-dom@7.1.3?external=react,react-dom",
-    "recharts": "https://esm.sh/recharts@2.15.0?external=react,react-dom",
+    "lucide-react": "https://esm.sh/lucide-react@0.463.0?deps=react@19.0.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.3?deps=react@19.0.0,react-dom@19.0.0",
+    "recharts": "https://esm.sh/recharts@2.15.0?deps=react@19.0.0,react-dom@19.0.0",
     "axios": "https://esm.sh/axios@1.7.9",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
